--- a/authors.html
+++ b/authors.html
@@ -128,8 +128,9 @@
                 </ul> -->
                 <h4>More pages</h4>
                 <ul class="list-unstyled">
-                  <li><a href="randobjects.html" class="text-white">Strange Objects</a></li>
-                  <li><a href="index.html" class="text-white">Strange Hallways</a></li>
+                  <li><a href="study.html" class="text-white">Places to study</a></li>
+                  <li><a href="socialize.html" class="text-white">Places to socialize</a></li>
+                  <li><a href="snack.html" class="text-white">Meet the Authors</a></li>
                 </ul>
               </div>
             </div>
@@ -204,10 +205,10 @@
 
 
 
-        <input type="text" id="current-time" readonly>
+        <!-- <input type="text" id="current-time" readonly> -->
 
         <!-- Include JavaScript at the end of the body -->
-        <script src="script.js"  style="background-color:aquamarine;"></script>
+        <!-- <script src="script.js"  style="background-color:aquamarine;"></script> -->
       </div>
       
 
