--- a/snack.html
+++ b/snack.html
@@ -422,7 +422,7 @@
         <a href="#" style="color: gray;">Back to top</a>
       </p>
       <p class="mb-2">Album example is &copy; Bootstrap! A big thanks to &copy; Bootstrap for their products.</p>
-      <p class="mb-1">This webpage was made in February 2024 for COM S 319, whih is taught by Dr.Aadalco.</p>
+      <p class="mb-1">This webpage was made in February 2024 for COM S 319, whih is taught by Dr.Aldaco.</p>
       <p class="mb-0">Please contact Naomi Mauss at nmauss@iastate or Aidan McGinnis at aidanmcg@iastate.edu</p>
     </div>
   </footer>
