--- a/authors.html
+++ b/authors.html
@@ -128,9 +128,9 @@
                 </ul> -->
                 <h4>More pages</h4>
                 <ul class="list-unstyled">
-                  <li><a href="study.html" class="text-white">Places to study</a></li>
-                  <li><a href="socialize.html" class="text-white">Places to socialize</a></li>
-                  <li><a href="snack.html" class="text-white">Meet the Authors</a></li>
+                  <li><a href="index.html" class="text-white">Places to Study</a></li>
+                  <li><a href="socialize.html" class="text-white">Places to Socialize</a></li>
+                  <li><a href="snack.html" class="text-white">Places to Snack</a></li>
                 </ul>
               </div>
             </div>
@@ -197,6 +197,7 @@
 
 
       <div>
+        <p style="margin-top: 10px;">Thank you very much for taking the time to read through and visit our webpage! We hope you have learned about places you can stidy at around campus!
         <p style="margin-top: 10px;">This webpage is dedicated to the coffee consumed while this was made.
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cup-hot-fill" viewBox="0 0 16 16" style="margin: 5px; color: rgb(133, 82, 35)">
           <path fill-rule="evenodd" d="M.5 6a.5.5 0 0 0-.488.608l1.652 7.434A2.5 2.5 0 0 0 4.104 16h5.792a2.5 2.5 0 0 0 2.44-1.958l.131-.59a3 3 0 0 0 1.3-5.854l.221-.99A.5.5 0 0 0 13.5 6zM13 12.5a2 2 0 0 1-.316-.025l.867-3.898A2.001 2.001 0 0 1 13 12.5"/>
