--- a/authors.html
+++ b/authors.html
@@ -115,7 +115,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-8 col-md-7 py-4">
-                <h4>About the Authors</h4>
+                <h4>About the Authors!</h4>
                 
                 <p class="text-body-secondary">The authors of this webpage are Aidan McGinnis, a sophomore studying Computer Science, and Naomi Mauss, a sophomore studying Software Engineering. Learn more about them <a href = "authors.html" style="color:grey;">here</a>.</p>
               </div>
@@ -153,7 +153,7 @@
 
 <body>
 
-    <h2 style="padding: 20px;">Meet the authors of this webpage!</h2>
+    <h2 style="padding: 20px;">Meet the authors of this webpage! Both of us are taking SE/COM S 319 Construction of User Interfaces for the Spring 2024 semester!</h2>
 
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
