--- a/socialize.html
+++ b/socialize.html
@@ -33,6 +33,46 @@
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
+      body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa; 
+}
+
+.header {
+    background-color: #343a40; 
+}
+
+.header a {
+    color: white;
+    text-decoration: none;
+}
+
+.header a:hover {
+    color: #ffc107;
+}
+
+.container {
+    max-width: 1200px;
+}
+
+.card {
+    transition: transform 0.3s ease;
+}
+
+.card img {
+    object-fit: cover;
+}
+
+.btn-primary {
+    background-color: #007bff; 
+    border-color: #007bff;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3; 
+    border-color: #0056b3;
+}
+
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -184,8 +224,8 @@
           <h4>More pages</h4>
           <ul class="list-unstyled">
             
-            <li><a href="study.html" class="text-white">Places to study</a></li>
-            <li><a href="snack.html" class="text-white">Places to snack</a></li>
+            <li><a href="index.html" class="text-white">Places to Study</a></li>
+            <li><a href="snack.html" class="text-white">Places to Snack</a></li>
             <li><a href="authors.html" class="text-white">Meet the Authors</a></li>
           </ul>
         </div>
@@ -209,7 +249,7 @@
 <main>
 
 
-    <h3 style="padding: 20px;">Places to socialize</h3>
+    <h3 style="padding: 20px;">Places to Socialize!</h3>
   <!-- <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
@@ -234,7 +274,7 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/ChairsWaterTwr.png" alt="Creepy Hallway" width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">Tasdfasdfasdfm</p>
+              <p class="card-text">A nice group of chairs to sit in during warm, sunny days with friends! Perfect to get your tans on as well!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                   Where is this?
@@ -268,7 +308,8 @@
           <div class="card shadow-sm">
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/Couch.png" alt="This is a cozy couch." width="100%" height="225">
-            <div class="card-body">asdjkbjkdgfbjagjlkgajlsfdl</p>
+            <div class="card-body">A comfy leather couch to study and watch T.V. with friends in a dorm! 
+              Many people can gather in these areas and watch Iowa State sports events and other ones as well!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal1">
                   Where is this?
@@ -304,7 +345,8 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/StandPlace.png" alt="This is a cozy couch." width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">alskjdfhlaksjdfhl</p>
+              <p class="card-text">A nice outdoor seating area near the library at the Hub. 
+                Perfect for the nice Spring and Summer days!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">
                   Where is this?
@@ -340,7 +382,8 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/TableBlack.png" alt="This is a bench under a tree." width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">fasdjlkdfsdsfjkjkhjk</p>
+              <p class="card-text">A nice lone picnic table bench to sit at during nice days outside! 
+                Perfect for you and your closest friends to grab a quick bite to eat anc have anice conversation in between classes!</p>
               <div class="d-flex justify-content-between align-items-center">
 
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3">
@@ -378,7 +421,8 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/BenchLagomar.png" alt="This is a bench under a tree." width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">fasdjlkdfsdsfjkjkhjk</p>
+              <p class="card-text">A pair of benches across from each other. These are nice when waiting for a burrito or just perfect to 
+                socialize with friends in between classes!</p>
               <div class="d-flex justify-content-between align-items-center">
 
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal4">
