--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 
+<!-- This is the study.html webpage also known as index.html-->
+
 <!-- Author: Naomi Mauss
     ISU Netid : nmauss@iastate.edu
     Date : February 1, 2024 -->
@@ -32,6 +34,48 @@
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
+
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa; 
+}
+
+.header {
+    background-color: #343a40; 
+}
+
+.header a {
+    color: white;
+    text-decoration: none;
+}
+
+.header a:hover {
+    color: #ffc107;
+}
+
+.container {
+    max-width: 1200px;
+}
+
+.card {
+    transition: transform 0.3s ease;
+}
+
+.card img {
+    object-fit: cover;
+}
+
+.btn-primary {
+    background-color: #007bff; /* Primary button color */
+    border-color: #007bff;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3; /* Darker color on hover */
+    border-color: #0056b3;
+}
+
+
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -182,8 +226,8 @@
           </ul> -->
           <h4>More pages</h4>
           <ul class="list-unstyled">
-            <li><a href="study.html" class="text-white">Places to study</a></li>
-            <li><a href="socialize.html" class="text-white">Places to socialize</a></li>
+            <li><a href="snack.html" class="text-white">Places to Snack</a></li>
+            <li><a href="socialize.html" class="text-white">Places to Socialize</a></li>
             <li><a href="authors.html" class="text-white">Meet the Authors</a></li>
           </ul>
         </div>
@@ -206,8 +250,9 @@
 
 <main>
 
-
-    <h3 style="padding: 20px;">Places to snack</h3>
+    <h4 style="padding: 20px; text-align:center;"> Welcome to our webpage Intrigue at ISU!
+     This first section tells you places to study around the Iowa State campus! We hope you learn something new after reading this and find some of the hidden gems that are scattered around campus.</h4>
+    <h3 style="padding: 20px;">Places to Study!</h3>
   <!-- <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
@@ -232,7 +277,7 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/StudyChair.png" alt="This is a chair where you can study." width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">This is a prime example of a good place to study outside of the library. These chairs provide a comfortable place to study in locations closer to the dorms or a lecture hall.</p>
+              <p class="card-text">This is a prime example of a good place to study inside of a dorm. These nice chairs are comfortale and contain a stand to put your computer and notebooks on. Perfect for late nights in the dorm when many assignments are due.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                   Where is this?
@@ -267,7 +312,8 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/Fireplace.png" alt="This is a study area in front of a fireplace." width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">TThis image of a fireplace is a very nice study room where students could study and collaborate together on projects and homework. The fireplace adds a nice laid back atmosphere that enhances the studying environment.</p>
+              <p class="card-text">This image of a fireplace is a very nice study room where students could study and collaborate together on projects and homework. 
+                The fireplace adds a nice laid back atmosphere that enhances the studying environment. This is perfect for those who don't want to leave their dorm especially on freezing cold Iowa nights.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal1">
                   Where is this?
@@ -302,7 +348,7 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/StudyPlaceAg.png" alt="Hall of Lagomarcino " width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">This is a corridor just outside of Lagomarcino Hall.</p>
+              <p class="card-text">This is a recently renovated study area in the hall of Agronomy. During the week many students come to eat their lunch including burritos and hot dogs from the nearby food trucks!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">
                   Where is this?
@@ -319,7 +365,7 @@
                         </button>
                       </div>
                       <div class="modal-body">
-                        <p>This study spot is is in the Agronomy building.</p>
+                        <p>This study spot is is in the Agronomy Hall commons.</p>
                         <img src="images/StudyPlaceAg.png" alt="This is near the MU." width="100%" height="100%">
                       </div>
                       <div class="modal-footer">
@@ -338,7 +384,7 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/ChairsKildee.png" alt="Machine Hall" width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">This hallway is full of machines. This was taken at the back of Science Hall 1.</p>
+              <p class="card-text">These chairs in are located in front of windows to give people a nice view outside. Perfect for people watching and a laid back study space.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3">
                   Where is this?
@@ -375,7 +421,8 @@
             <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
             <img src ="images/StudyAero.png" alt="Machine Hall" width="100%" height="225">
             <div class="card-body">
-              <p class="card-text">This hallway is full of machines. This was taken at the back of Science Hall 1.</p>
+              <p class="card-text">This spot which contains a whiteboard and a few chairs is perfect for engineers who have to write down many equations and complex math problems. 
+                Also good for brainstorming software ideas too!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal4">
                   Where is this?
